# -*- coding: utf-8 -*-
[metadata]
name = demo_app
summary = A toy application for demo and testing purposes. We implement dummy inference (ie. we return the same inputs we are feed) and dummy training (ie. we sleep for some time and output some random monitoring metrics).
description-file =
    README.md
author = Ignacio Heredia
author-email = iheredia@ifca.unican.es
version = 0.0.1
license = MIT
home-page = https://github.com/deephdc/demo_app
python-requires = >=3.8
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[files]
packages =
    demo_app

[entry_points]
deepaas.v2.model =
    demo_app = demo_app.api

